syntax = "proto3";

package org.example.service;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "org.example.service";

message Country {
  int64 id = 1;
  string name = 2;
}

message Manufacturer {
  int64 id = 1;
  string name = 2;
  Country country = 3;
}

message Model {
  int64 id = 1;
  string name = 2;
  Manufacturer manufacturer = 3;
}

message Color {
  int64 id = 1;
  string name = 2;
}

message GetVehicleByIdRequest {
  int64 vehicle_id = 1;
}

message GetVehicleByIdResponse {
  int64 id = 1;
  int32 amount = 2;
  Model model = 3;
  Color color = 4;
  float price = 5;
  int32 year = 6;
  bool isUsed = 7;
  string type = 8;
}

message VehicleSoldRequest {
  int64 vehicle_id = 1;
}

service VehicleService {
  rpc GetVehicleById(GetVehicleByIdRequest) returns (GetVehicleByIdResponse);
  rpc VehicleSold(VehicleSoldRequest) returns (google.protobuf.Empty);
}